Fix the collapsed Quantity/Price columns on the checkout page

--- a/sass/content/_tickets.scss
+++ b/sass/content/_tickets.scss
@@ -7,15 +7,15 @@
 	.tix-column-remaining {
 		display: none;
 	}
-	
+
 	.tix-column-quantity {
 		text-align: right;
 	}
-	
+
 	.tix-row-coupon td {
 		padding-top: 15px;
 	}
-	
+
 	#tix-coupon-input {
 		float: left;
 		margin-right: -5px;
@@ -23,9 +23,30 @@
 		width: calc( 100% - 185px);
 		border-radius: 3px 0 0 3px;
 	}
-	
+
 	#tix-coupon-container input[type="submit"] {
 		width: 188px;
+	}
+
+	td.tix-column-price::before,
+	td.tix-column-per-ticket::before,
+	.tix-row-total strong::before {
+		content: '$';
+	}
+}
+
+.tix-order-summary {
+	.tix-column-quantity {
+		text-align: left;
+	}
+
+	.tix-row-total td,
+	.tix-column-price {
+		text-align: right;
+	}
+
+	.tix-row-total td {
+		padding-top: 15px;
 	}
 }
 
@@ -33,13 +54,13 @@
 	th, td {
 		padding-bottom: 20px;
 	}
-	
+
 	.tix-right {
 		padding-left: 8px;
 
 		label {
 			font-weight: normal;
-			
+
 			input {
 				margin-right: 5px;
 			}
@@ -48,7 +69,7 @@
 		br {
 			display: none;
 		}
-		
+
 		textarea {
 			width: 100%;
 			height: 200px;
